--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,9 +17,13 @@
     </header> -->
         <header>
         <div class="container header-container">
-            <a href="/index" class="logo"><span>SkillRank</span></a>
-           
-        </div>
+        <a href="index.html" class="logo"><span>SkillRank</span></a>
+        <div class="header-right">
+            <button id="clearBtn" class="clear-btn" title="Clear All">
+                <i class="fas fa-times-circle"></i> Clear
+            </button>
+
+</div>
     </header>
     <div class="container">
         
